# filecat

./: Cargo.toml  LICENSE  README.md  text.tx
src/: main.rs
